Updates from Overleaf

--- a/primer-parcial.tex
+++ b/primer-parcial.tex
@@ -2,6 +2,7 @@
 \subsection*{Práctica 1: Repaso álgebra lineal}
 \begin{enumerate}
     \item $v^tuu^tv = (u^tv)^2$
+    \item Si $x^tx=0 \Rightarrow x = 0$
     \item \colorbox{Salmon}{$AB \neq BA$}
     \item $C(A+B) = CA + CB$
     \item Regla general multiplicación $AB$: \\
@@ -70,6 +71,7 @@ Ab_1 & Ab_2 & Ab_3
     \begin{itemize}
         \item $det(AB) = det(A)*det(B)$
         \item $det(I) = 1$
+        \item $det(A) = det(A^t)$
         \item $det(A^{-1}) = (det(A))^{-1} \iff A$ es inversible
         \item $det(A) = \prod_{i=1}^{n}a_{ii} \iff A$ es triangular 
         \item \colorbox{Gray}{Si $A \in \mathbb{R}^{nxn} \Rightarrow$} $det(kA) = k^ndet(A)$ -- Chequear qué pasa si A no es cuadrada.
@@ -130,6 +132,7 @@ Ab_1 & Ab_2 & Ab_3
     \item $A-A^t$ es una matriz antisimétrica
     \item Toda matriz puede escribirse como la suma entre una matriz simétrica y una antisimétrica
     \item Definida positiva $\iff x^tAx>0 \  \forall x \in \mathbb{R}^n x\neq0$
+    \item Si A es simétrica definida positiva $\Rightarrow A^t = A$ y $A^t$ es definida positiva
     \item Si A no es inversible, $AA^t$ es simétrica semi-definida positiva, es decir que $x^tAA^tx \geq 0 \forall x $
     \item Si A es SDP entonces:
     \begin{itemize}
