--- a/primer-parcial.tex
+++ b/primer-parcial.tex
@@ -52,7 +52,7 @@ Ab_1 & Ab_2 & Ab_3
     \item $(AB)^{-1} = B^{-1}A^{-1}$
     \item $(A^t)^{-1} = (A^{-1})^t$
     \item $(kA)^{-1} = k^{-1} A^{-1}$, $k\in\mathbb{R}$
-    \item La inversa de una matriz triangular superior es triangular inferior, y viceversa
+    \item La inversa de una matriz triangular superior es triangular \colorbox{Dandelion}{superior}, y viceversa
     \item \colorbox{Dandelion}{Si A es estrictamente diagonal dominante entonces es \textbf{inversible}}
     \item \colorbox{Salmon}{\textbf{NO VALE} que $(A+B)^{-1} = A^{-1} + B^{-1}$}
     \end{itemize}
@@ -106,8 +106,8 @@ Ab_1 & Ab_2 & Ab_3
          \item $||A||_1 = \max_{1\leq j\leq n} \sum_{i=1}^{n} |a_{ij}|$ (máxima suma de cada columna)
           \item $||A||_{\infty} = \max_{1\leq i\leq n} \sum_{j=1}^{n} |a_{ij}|$ (máxima suma de cada fila)
          \item $||A||_2 = \max_{||x||_2=1} ||Ax||_2$
-         \item $\| A \|_{F} = \sqrt{ \sum_{i=1}^{n} a_{ij}^2 } = \sqrt{ \| c_1(A) \|_2^2 + \ldots + \| c_n(A) \|_2^2}$ donde $c_i$ es la columna $i$ de $A$ 
-         \item $||A||_F = ||A^t||_F$
+         \item $\| A \|_{F} = \sqrt{ \sum_{i=1}^{n}\sum_{j=1}^{n} a_{ij}^2 } = \sqrt{ \| c_1(A) \|_2^2 + \ldots + \| c_n(A) \|_2^2}$ donde $c_i$ es la columna $i$ de $A$ 
+         \item $||A||_F = ||A^t||_F$ (ya que la $||.||_F$ es la raíz de la suma de todos sus elementos al cuadrado)
         \item $||I|| = 1$
         \item $||Ax|| \leq ||A||*||x||$
         \item $||AB|| \leq ||A||*||B|| \iff$ A,B son matrices cuadradas
@@ -144,6 +144,7 @@ Ab_1 & Ab_2 & Ab_3
         \item \newnote{La submatriz 2 a n (despues del primer paso de triangulación de la eliminación gaussiana) es SDP}
     \end{itemize}
     \item $A$ $sdp \iff B^tAB$ $sdp$ con $B$ inversible
+    \item Si tiene fact LU y es simétrica, si es toda positiva $\Rightarrow$ tiene factorización de Cholesky
     \item Si $A$ es $sdp$, el elemento de módulo máximo de A está en la diagonal. 
     \item Si $A$ es $sdp \Rightarrow |x^tAy| \leq \sqrt{x^tAx}\sqrt{y^tAy}$ 
     \item Si $A$ es $sdp \Rightarrow |a_{ij}|^2\leq a_{ii}a_{jj}$
@@ -196,5 +197,6 @@ a_{21}
         \item $v = x + y$
         \item $u = \frac{x-y}{||x-y||_2}$
         \item $H = I - 2uu^t$
+        \item $H$ es simétrica y ortogonal
     \end{itemize}
 \end{enumerate}
